--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -58,7 +58,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownCities">
                     <a class="dropdown-item" href="#">Krakow</a>
                     <a class="dropdown-item" href="#">Warsaw</a>
-                    <a class="dropdown-item" href="#">Czechowice-Dziedzice</a>
+                    <a class="dropdown-item" href="/czechowice-dziedzice">Czechowice-Dziedzice</a>
                 </div>
               </li>
         </ul>
