--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -11,6 +11,7 @@
             <h1 class="text-center">PROFILE</h1>
             <div class="text-center">
                 <a href="/password-reset" class="btn btn-primary" style="background-color: #8C00FF99;">Reset Password</a>
+                <a href="/logout" class="btn btn-primary" style="background-color: #8C00FF99;">Logout</a>
             </div>
         </div>
     </div>
