--- a/templates/main/display_route.html
+++ b/templates/main/display_route.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-<title>UAP - Czechowice Dziedzice</title>
+<title>UAP - Display route</title>
 {% endblock %}
 
 {% block body %}
