--- a/templates/main/display_route.html
+++ b/templates/main/display_route.html
@@ -7,27 +7,31 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-lg-6">
             <div class="route-details p-4">
                 <h1 class="mb-4">Route Details</h1>
-                <div class="mb-3">
-                    <strong>User:</strong> {{ route.user_id.username }}
+                <div class="mb-3 d-flex justify-content-between align-items-start">
+                    <strong style="color: #004AAD;">User:</strong>
+                    <span class="text-end">{{ route.user_id.username }}</span>
                 </div>
-                <div class="mb-3">
-                    <strong>City:</strong> {{ route.city_id.name }}
+                <div class="mb-3 d-flex justify-content-between align-items-start">
+                    <strong style="color: #004AAD;">City:</strong>
+                    <span class="text-end">{{ route.city_id.name }}</span>
                 </div>
-                <div class="mb-3">
-                    <strong>Length:</strong> {{ route.length }}
+                <div class="mb-3 d-flex justify-content-between align-items-start">
+                    <strong style="color: #004AAD;">Length:</strong>
+                    <span class="text-end">{{ route.length }}</span>
                 </div>
-                <div class="mb-3">
-                    <strong>Description:</strong> {{ route.description }}
+                <div class="mb-3 d-flex justify-content-between align-items-start">
+                    <strong style="color: #004AAD;">Description:</strong>
+                    <span class="text-end">{{ route.description }}</span>
                 </div>
             </div>
         </div>
-        <div class="col-lg-6">
-            <div id="map" style="height: 600px;"></div>
+        <div class="col-lg-6 d-flex justify-content-center align-items-center">
+            <div id="map" style="width: 100%; height: 600px;"></div>
         </div>
     </div>
 </div>
