--- a/templates/main/display_routes_in_city.html
+++ b/templates/main/display_routes_in_city.html
@@ -7,7 +7,7 @@
 <div class="container">
     <h1 style="margin-bottom: 30px; margin-top: 20px;">List of Routes in {{ city.name }}</h1>
     <h2 style="margin-bottom: 30px;"> {{ city.description }} </h2>
-    <div class="row">
+    <!-- <div class="row">
         {% for route in routes %}
         <div class="col-lg-4 mb-4">
             <div class="card h-100">
@@ -21,6 +21,7 @@
         {% empty %}
         <p>No routes available.</p>
         {% endfor %}
-    </div>
+    </div> -->
+    {% include '../partials/list_routes.html' %}
 </div>
 {% endblock %}
